--- a/README
+++ b/README
@@ -2,8 +2,12 @@ This fork automatically installs dependencies and compiles partialZipBrowser
 
 First, make sure you have [Homebrew](http://brew.sh) installed:
 
-```/usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"```ff
-cr
+```/usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"```
+
+Then, run the installation script:
+
+```sh install.sh```
+
 
 partialZipBrowser is a commandline tool for browsing and downloading files from zip files on remote webserver.
 
@@ -22,5 +26,3 @@ Following parameter are avaliable:
   -g, --get       <path>     	downloads remote file
   -d, --directory            	download remote directory recursively instead of sindle file
                              	use this with -g (--get)
-f
-
